<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddAddress">

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:ems="10"
        android:hint="@string/hint"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textColorHint="#4A4646"
        app:layout_constraintBaseline_toBaselineOf="@id/name_textView"
        app:layout_constraintLeft_toRightOf="@id/name_textView" />

    <TextView
        android:id="@+id/name_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/name"
        android:textSize="18sp"
        app:layout_constraintRight_toRightOf="@id/title_add"
        app:layout_constraintTop_toBottomOf="@id/profile_image" />

    <TextView
        android:id="@+id/phone_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/phone"
        android:textSize="18sp"
        app:layout_constraintRight_toRightOf="@id/title_add"
        app:layout_constraintTop_toBottomOf="@id/name_textView" />

    <EditText
        android:id="@+id/editTextPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="phone"
        android:maxLength="11"
        app:layout_constraintBaseline_toBaselineOf="@id/phone_textView"
        app:layout_constraintLeft_toRightOf="@id/phone_textView" />

    <TextView
        android:id="@+id/email_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/email"
        android:textSize="18sp"
        app:layout_constraintRight_toRightOf="@id/title_add"
        app:layout_constraintTop_toBottomOf="@id/phone_textView" />

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        app:layout_constraintBaseline_toBaselineOf="@id/email_textView"
        app:layout_constraintLeft_toRightOf="@id/email_textView"
        android:importantForAutofill="no"
        android:layout_marginStart="20dp" />

    <TextView
        android:id="@+id/title_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:text="@string/add"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="15dp" />

    <Button
        android:id="@+id/cancel_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="75dp"
        android:text="@string/cancel"
        app:layout_constraintLeft_toLeftOf="@id/phone_textView"
        app:layout_constraintTop_toBottomOf="@id/email_textView" />

    <Button
        android:id="@+id/ok_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ok"
        app:layout_constraintRight_toRightOf="@id/editTextPhone"
        app:layout_constraintTop_toTopOf="@id/cancel_button" />

    <ImageView
        android:id="@+id/profile_image"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:adjustViewBounds="true"
        android:maxWidth="150dp"
        android:maxHeight="150dp"
        android:minWidth="150dp"
        android:minHeight="150dp"
        android:scaleType="centerInside"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_add"
        app:srcCompat="@android:drawable/ic_menu_gallery" />
</androidx.constraintlayout.widget.ConstraintLayout>